# ChangeLog for www-servers/tomcat
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.178 2008/02/05 19:40:04 wltjr Exp $

*tomcat-5.5.26 (05 Feb 2008)

  05 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +files/5.5/26-main_tomcat_catalina_jasper_build_xml.patch,
  +tomcat-5.5.26.ebuild:
  Bumped 5.5 to latest release

  21 Jan 2008; Vlastimil Babka <caster@gentoo.org> tomcat-5.5.25.ebuild,
  tomcat-5.5.25-r1.ebuild:
  Restrict junit dependency to proper slot.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> tomcat-6.0.14.ebuild,
  tomcat-6.0.14-r1.ebuild:
  Restrict junit dependency.

  18 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  tomcat-6.0.14-r1.ebuild:
  ppc stable, bug #196066

  17 Oct 2007; Markus Rothe <corsair@gentoo.org> tomcat-6.0.14-r1.ebuild:
  Stable on ppc64; bug #196066

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  tomcat-6.0.14-r1.ebuild:
  stable x86, security bug 196066

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  tomcat-5.5.25-r1.ebuild:
  stable x86, security bug 196066

  17 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-5.5.25-r1.ebuild, tomcat-6.0.14-r1.ebuild:
  amd64 stable, bug #196066.

*tomcat-6.0.14-r1 (16 Oct 2007)
*tomcat-5.5.25-r1 (16 Oct 2007)

  16 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -files/5.5/jasper_build_xml.patch,
  -files/5.5/jsr154_examples_build_xml.patch,
  -files/5.5/jsr152_examples_build_xml.patch,
  -files/5.5/main_build_xml.patch, -files/5.5/catalina_build_xml.patch,
  -files/5.5/tomcat_build_xml.patch, +files/5.5/webdav.patch,
  +files/6/webdav.patch, -tomcat-5.5.23-r6.ebuild, +tomcat-5.5.25-r1.ebuild,
  +tomcat-6.0.14-r1.ebuild:
  Added patch for webdav per security bug #196066. Removed past version, and
  various patches for that version.

  12 Oct 2007; Roy Marples <uberlord@gentoo.org> tomcat-5.5.25.ebuild:
  Added ~x86-fbsd back again, #195571
