@@ -13,10 +13,12 @@ AUX 6/webdav.patch 822 RMD160 391bafed1ff60c20f403c0983845b7da601447f1 SHA1 50d2
 DIST apache-tomcat-5.5.25-src.tar.gz 5106363 RMD160 83bb506b3f0fbde75e346e02832645bd6526fa7d SHA1 81ef41e25f805831aa63353f52e5b498c74a3414 SHA256 b7618f0a1e04623bfc9e14bdb51ae54203fa1e80f6c7ee61e2387cb11de8736f
 DIST apache-tomcat-5.5.26-src.tar.gz 5062991 RMD160 c82e7640b36c27cfc6ea51f01dc3ff492441a930 SHA1 1eb1c479023d3a7e459ce03860d9d984b673ab27 SHA256 ddc677d7391c438e6102d0b3e9653eaca661344ef74b0260c1f488340d660395
 DIST apache-tomcat-6.0.14-src.tar.gz 3458776 RMD160 24f586d946654edcc70c5ec1ee457022c4a5d070 SHA1 3156b0b853f8f340ef825c58d0281cdda3f5816e SHA256 ef57398cc8e0294fb74d0d76debdaebf51ec47f18c9c927ddc98530dfa93cf88
+DIST apache-tomcat-6.0.16-src.tar.gz 3527896 RMD160 8e6c0900889439f4cb89db35afb0c27e77103c00 SHA1 74127ba3da450a97869f2a2a2f0e134d23474018 SHA256 9e0a776f9d9c5fe935a39b066f74c07e7d26b4f30b66b22622a20dec235b0a7f
 EBUILD tomcat-5.5.25-r1.ebuild 10867 RMD160 d581fa53dbdcc48e746c13a95aa5a607ed6e830a SHA1 7567d5696255718aa49be515b26b006b2fe0ad46 SHA256 f61338b1a3281ab4f988dd9f561de0b3feee0df122f0d38b834f8212d27248f9
 EBUILD tomcat-5.5.25.ebuild 10821 RMD160 794cc24a400931038e8231671bb51a1ae3b485a4 SHA1 1eda05953d562c7d78186d0f592fa6178b18b252 SHA256 e9cbfc3613e97573849b27220a6c2080f8c068deec27d1f092d1106f2aef3566
 EBUILD tomcat-5.5.26.ebuild 10923 RMD160 728483ff8a77aa0cdd5d95c3aaafd7d45bf58f28 SHA1 943fcb2d391b667e30a4e1cafb4b35df97ed2844 SHA256 23e6cfd1d7b76fb34a8d0a9edc52bccf8561179fdcc97750fe5a6d5483da6d51
 EBUILD tomcat-6.0.14-r1.ebuild 6286 RMD160 024b3fa2b315b61ac26e7edc0209a6d49296cb93 SHA1 58d0180b5cf01c5f1487c9bf1da5e18ee950c0d9 SHA256 5a096f5ab7504f8f004fc3cb71be282e64a4b680447812fab9bbdb986c6c697d
 EBUILD tomcat-6.0.14.ebuild 6240 RMD160 72934cf6951ae21b034506705ff5b5bb8148725b SHA1 aae418d32043873e694fa19d0a3c915771608b1a SHA256 621fb73876cdfdec865251467c26b15320e646e38d67ce9d5b31d5063c4be7b7
-MISC ChangeLog 51559 RMD160 6e316a90fd545435fc0761923a168953fe1ac021 SHA1 7815ce2c3764d57f0697ee79f447b97064f61bd9 SHA256 34ddecd757761a8bc6fa5d842c74af1b6853300461bf7827fcecea7713f78c97
+EBUILD tomcat-6.0.16.ebuild 6243 RMD160 1a79c96adcb7a74ddcdd788ac15a1da273d07793 SHA1 eca23c35dd4b889c5cba21e94f545b73c4f8af7e SHA256 345dfca37f895190078acff38df5b5c28efe0f455b06115211d58f79cb1c7059
+MISC ChangeLog 51703 RMD160 4328010afefbd9b7376acb7a46b9f7693fefd40a SHA1 21fdf8dcc0d32cfde8e9dcc16c36f9bff542bafc SHA256 fb3ec0b11e29fc2a026fee5e8136eefc52a22977206e306f66a7ac3811b10c0f
 MISC metadata.xml 556 RMD160 88a7809fe3f73c2d351b9fdda025fe88dfb11f31 SHA1 e8dcd8204d0ea02558dd07e1aded5dc58ed1460c SHA256 ac94c1d58b05b47598f311e6efb971fdb30ad9a25f3c32cb9c064fb6330dad79
